--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         }
     </style>
     <title>Template </title>
-    <!-- <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Cairo" rel="stylesheet">
     <link rel="preload" href="assets/css/main.css" as="style" onload="this.rel='stylesheet'">
     <noscript>
         <link rel="stylesheet" href="assets/css/main.css">
@@ -375,7 +375,7 @@
 
                     <!-- Start: carousel Of items -->
                     <div class="carousel__track">
-                        <div class="carousel" data-screen-view="4" data-tablet-view="2" data-mobile-view="1" data-position="">
+                        <div class="carousel _rtl" data-screen-view="4" data-tablet-view="2" data-mobile-view="1" data-position="">
                             <!-- start: fetch Data from Database  -->
                             <!-- <element> -->
                             <!-- End: Fetch DT -->
@@ -420,38 +420,38 @@
                             <!-- Exemple 3 -->
                             <div class="carousel__bucket bucket">
                                 <div class="bucket__image imgbackground">
-                                    <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read Pulling Back the Curtain: An Inside Look at the Islamic State’s Media Organization">
+                                    <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/08/Advice-for-Media-Mujahid-highlight-image-300x215.jpg">
                                     </a>
                                 </div>
                                 <div class="bucket__content">
                                     <h5 class="carousel__bucket__title">
-                                        <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/">Pulling Back the Curtain: An Inside Look at the Islamic State’s Media Organization</a>
+                                        <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/">الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل</a>
                                     </h5>
                                     <p class="bucket__excerpt">
-                                        Report Description Over the past five years, there has been a significant amount of discussion on the propaganda created
-                                        and...
+                                         لفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل وبول ووكر. يعود المجرم السابق (دوم توريتو)
+                                        إلى لوس أنجلوس للعمل مع عميل الإف بي آي (براين أو كونور)، بهدف الإطاحة بأحد تجار المخدرات....
                                     </p>
-                                    <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read Pulling Back the Curtain: An Inside Look at the Islamic State’s Media Organization"
+                                    <a href="https://ctc.usma.edu/pulling-back-the-curtain-an-inside-look-at-the-islamic-states-media-organization/" title="Read الفيلم الرابع من أفلام السرعة والتشويق (ذا فاست آند ذا فيوريوس) من بطولة فين ديزل"
                                         class="bucket__callout callout">Read</a>
                                 </div>
                             </div>
                             <!-- Exemple 4 -->
-                            <div class="carousel__bucket bucket">
+                            <div class="carousel__bucket bucket ">
                                 <div class="bucket__image imgbackground">
-                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title="Read The June 2018 Cologne Ricin Plot: A New Threshold in Jihadi Bio Terror">
+                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title=" جيسون بورن">
                                         <img src="https://ctc.usma.edu/app/uploads/2018/08/CTC-SENTINEL-082018_cover-232x300.jpg">
                                     </a>
                                 </div>
                                 <div class="bucket__content">
                                     <h5 class="carousel__bucket__title">
-                                        <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/">The June 2018 Cologne Ricin Plot: A New Threshold in Jihadi Bio Terror</a>
+                                        <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/">جيسون بورن شخصية أفلام الآكشن الشهيرة يعود من جديد إلى عالم مليء بالمغامرة</a>
                                     </h5>
                                     <p class="bucket__excerpt">
-                                        Abstract: In June 2018, German security services uncovered an alleged terrorist plot involving ricin by a Tunisian extremist
-                                        living in Cologne...
+                                         شخصية أفلام الآكشن الشهيرة جيسون بورن، يعود من جديد إلى عالم مليء بالمغامرة والتشويق، ويكتشف المزيد عن ماضيه وأسرار لم تكن
+                                        في الحسبان...
                                     </p>
-                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title="Read The June 2018 Cologne Ricin Plot: A New Threshold in Jihadi Bio Terror"
+                                    <a href="https://ctc.usma.edu/june-2018-cologne-ricin-plot-new-threshold-jihadi-bio-terror/" title=" جيسون بورن"
                                         class="bucket__callout callout">Read</a>
                                 </div>
                             </div>
@@ -483,7 +483,7 @@
                             </a>
                         </div>
 
-                        <div class="homesheet__content">
+                        <div class="homesheet__content _rtl">
 
                             <img class="homesheet__logo" src="https://ctc.usma.edu/app/themes/ctc/dist/images/ctc-sentinel-logo_7f9a17b8.svg">
 
@@ -506,7 +506,7 @@
                 <div class="container fullwidth">
                     <h2 class="groupsstack__title _rtl">الجماعات الأكثر بحثا</h2>
                 </div>
-                <div class="groupsstack__wrap stack__wrap">
+                <div class="groupsstack__wrap stack__wrap _rtl">
                     <div class="groupbucket bucket">
                         <div class="groupbucket__content">
                             <h5 class="groupbucket__title">
@@ -768,21 +768,21 @@
             </header>
 
             <!-- Fetch Data from Database -->
-            <ul class="harmonydocuments__table__contents">
+            <ul class="harmonydocuments__table__contents _rtl">
                 <!-- Exmple 1 -->
                 <li class="harmonydocuments__item">
                     <h5 class="harmonydocuments__item__title">
                         <span class="favoris">
                             <!-- When is in favoris -->
                             <i>
-                                <img width="15" src="assets/image/like.svg" alt="">
+                                <img width="20" src="assets/image/like.svg" alt="">
                             </i>
                             <!-- when not -->
                             <!-- <i>
-                                <img width="15" src="assets/image/no-like.svg" alt="">
+                                <img width="20" src="assets/image/no-like.svg" alt="">
                             </i> -->
                         </span>
-                        <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">Naruto Uzumaki | Naruto Wiki | FANDOM powered by Wikia</a>
+                        <a href="/harmony-program/letter-from-abu-hamza-to-ansar-al-sunnah-highlighting-divisions-original-language-2/">ناروتو اوزوماكي ناروتو ويكي مدعوم من ويكيا</a>
                     </h5>
                     <p class="harmonydocuments__item__description">Naruto Uzumaki est le personnage principal du manga Naruto inventé par Masashi Kishimoto. Dans l'univers de la série, Naruto
                     est un jeune ninja du village de Konoha...</p>
@@ -796,11 +796,11 @@
                     <h5 class="harmonydocuments__item__title">
                         <!-- When is in favoris -->
                             <!-- <i>
-                                <img width="15" src="assets/image/like.svg" alt="">
+                                <img width="20" src="assets/image/like.svg" alt="">
                             </i> -->
                             <!-- when not -->
                             <i>
-                                <img width="15" src="assets/image/no-like.svg" alt="">
+                                <img width="20" src="assets/image/no-like.svg" alt="">
                             </i>
                         <a href="/harmony-program/letter-from-abu-hamza-al-mujahir-to-abi-abdullah-al-shafii-original-language-2/">Liste des épisodes de One Piece — Wikipédia</a>
                     </h5>
@@ -822,11 +822,23 @@
     <!-- End: Section(Search) -->
 
     <!-- Start: Exemple Embed Video -->
-    <video id="plyr-video" poster="https://http2.mlstatic.com/painel-lona-fosca-sublimaco-150-por-10-dragon-boll-super-D_NQ_NP_636547-MLB27867713255_072018-F.jpg" controls>
-        <source src="" type="video/mp4">
-        <!-- Captions are optional -->
-        <!-- <track kind="captions" label="English captions" src="/path/to/video-caption.vtt" srclang="en" default> -->
-    </video>
+    <div class="embed-video">
+        <span class="favoris">
+            <!-- When is in favoris -->
+            <i>
+                <img width="30" src="assets/image/like.svg" alt="">
+            </i>
+            <!-- when not -->
+            <i>
+                <img width="30" src="assets/image/no-like.svg" alt="">
+            </i>
+        </span>
+        <video id="plyr-video" poster="https://http2.mlstatic.com/painel-lona-fosca-sublimaco-150-por-10-dragon-boll-super-D_NQ_NP_636547-MLB27867713255_072018-F.jpg" controls>
+            <source src="" type="video/mp4">
+            <!-- Captions are optional -->
+            <!-- <track kind="captions" label="English captions" src="/path/to/video-caption.vtt" srclang="en" default> -->
+        </video>
+    </div>
     <!-- End: Exemple Embed Video -->
 
     <footer class="colophon">
@@ -873,7 +885,7 @@
     <!-- End: Box (Audio) -->
 
 
-    <script>(function (href, before, media) { "use strict"; var ss = window.document.createElement("link"); var ref = before || window.document.getElementsByTagName("script")[0]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; ref.parentNode.insertBefore(ss, ref); function toggleMedia() { var defined; for (var i = 0; i < sheets.length; i++) { if (sheets[i].href && sheets[i].href.indexOf(href) > -1) { defined = true; } } if (defined) { ss.media = media || "all"; } else { setTimeout(toggleMedia); } } toggleMedia(); return ss; })('//fonts.googleapis.com/css?family=Cairo:600,700,900&amp;subset=arabic');</script>
+    <!-- <script>(function (href, before, media) { "use strict"; var ss = window.document.createElement("link"); var ref = before || window.document.getElementsByTagName("script")[0]; var sheets = window.document.styleSheets; ss.rel = "stylesheet"; ss.href = href; ss.media = "only x"; ref.parentNode.insertBefore(ss, ref); function toggleMedia() { var defined; for (var i = 0; i < sheets.length; i++) { if (sheets[i].href && sheets[i].href.indexOf(href) > -1) { defined = true; } } if (defined) { ss.media = media || "all"; } else { setTimeout(toggleMedia); } } toggleMedia(); return ss; })('//fonts.googleapis.com/css?family=Cairo:600,700,900&amp;subset=arabic');</script> -->
 
 
     <script defer src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
