--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                         </li>
 
                         <li id="menu-sigha" class="menu-item menu-item-has-children menu-education">
-                            <a href="#">
+                            <a href="#" class="showPc">
                                 <span class="icon icon-chevron-small-down"></span>الصیغة </a>
 
                             <ul class="sub-menu list-formula">
@@ -229,7 +229,7 @@
 
 
                         <li id="menu-author" class="inactive menu-item menu-item-has-children menu-research">
-                            <a href="#">
+                            <a href="#" class="showPc">
                                 <span class="icon icon-chevron-small-down"></span>المؤلف </a>
 
                             <ul class="sub-menu list-authors">
@@ -245,9 +245,9 @@
                         </li>
 
                         <li class="inactive menu-item menu-item-has-children menu-research2 showmobile">
-                            <a href="#">الصيغة
+                            <!-- <a href="#">الصيغة
                                 <span class="icon"></span>
-                            </a>
+                            </a> -->
 
                             <ul class="sub-menu">
                                 <li class="inactive menu-item menu-item-has-children menu-data-primary-sources">
@@ -275,7 +275,7 @@
                         <!-- End: When user not connected -->
 
                         <!--  Start: When user connected -->
-                        <li class="menu-item menu-item-has-children _rtl user-info">
+                        <li class="menu-item menu-item-has-children _rtl user-info showPc">
                             <img id="avatar-user" src="assets/image/avatar.png" alt="">
                             <span class="name">
                                 <span class="icon icon-chevron-small-down"></span>
@@ -863,6 +863,9 @@
 
     <!-- Start: box (Audio) -->
     <div class="box-audio">
+        
+        <button>إخفاء</button>
+        <button>إظهار</button>
         <div class="info-audio">
             <img width="56" src="https://avatarfiles.alphacoders.com/946/94610.jpg" alt="">
             <p class="title-date">
