--- a/index.html
+++ b/index.html
@@ -863,9 +863,9 @@
 
     <!-- Start: box (Audio) -->
     <div class="box-audio">
-<!--         
-        <button>إخفاء</button>
-        <button>إظهار</button> -->
+        
+        <button class="btn-hide">إخفاء</button>
+        <button class="btn-show">إظهار</button>
         <div class="info-audio">
             <img width="56" src="https://avatarfiles.alphacoders.com/946/94610.jpg" alt="">
             <p class="title-date">
