--- a/index.html
+++ b/index.html
@@ -861,7 +861,33 @@
     </footer>
 
     <!-- Start: box (Audio) -->
-    
+    <div class="box-audio">
+        <div class="btn-display-audio">
+            <button class="btn-hide">إخفاء</button>
+            <button class="btn-show">إظهار</button>
+        </div>
+        <div class="info-audio">
+            <img width="56" src="https://avatarfiles.alphacoders.com/946/94610.jpg" alt="">
+            <p class="title-date">
+                <p>Tuneln Conversation berner and troo</p>
+                <span class="date">18/10/2018</span>
+                <span class="favoris">
+                    <!-- When is in favoris -->
+                    <i>
+                        <img width="15" src="assets/image/like.svg" alt="">
+                    </i>
+                    <!-- when not -->
+                    <i>
+                        <img width="15" src="assets/image/no-like.svg" alt="">
+                    </i>
+                </span>
+            </p>
+        </div>
+        <div class="clip-audio">
+            <audio src="assets/aud.mp3" preload="auto" controls>
+            </audio>
+        </div>
+    </div>
     <!-- End: Box (Audio) -->
 
 
